--- a/package.json
+++ b/package.json
@@ -13,7 +13,17 @@
     "fp-ts": "^2.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ts-pattern": "^5.0.8"
+    "ts-pattern": "^5.0.8",
+    "@tiptap/extension-link": "^2.1.13",
+    "@tiptap/extension-text-align": "^2.1.13",
+    "@tiptap/pm": "^2.1.13",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
+    "@mui/types": "^7.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
